# guidebook

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pre-commit-gulp.sh  .pre-commit-mkdocs.sh  .readthedocs.yaml  .remarkrc.error  .restyled.yaml  .retext.suggestion.js  .travis.yml  CHANGELOG.md  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  action.yml  gulpfile.js  mkdocs.yml  requirements.in  requirements.txt  robots.txt
.config/: .gitignore  Dockerfile  action.yml  codespell-ignore  codespellrc  linkspector.yml  markdown.links.config.json  mkdocs.yml  pre-commit-search-and-replace.yaml  redirects.yml  requirements.in  requirements.txt  update_rename_links.py
.config/mkdocs/: README.md  check-material-insiders-version.sh  mkdocs.sh  pyproject.toml
.config/mkdocs/scripts/: __init__.py  format_changed.py
.docs/: test.md
.github/: dependabot.yml  pull_request_template.md
000-contributing/: README.md
020-about-us/: culture.md
030-policies/: annual-retreat.md  employee-referral-bonus.md  prodev.md  security.md
040-employee-handbook-us/: tech-stipend.md
050-how-we-work/: bookmarks.md  support.md
070-project-management/: hard-conversations.md  listserv-setup.md  pm-unanet-tasks.md  starting-new-project.md
about-civicactions/: README.md  annual-summit.md  background-and-history.md  culture.md  mission-values.md  our-structurehow-we-are-organized.md  our-structuremanagement-ops.md  our-structureorg-structure.md
about-this-guidebook/: README.md  automatic-checking.md  editing-the-guidebook.md  git-workflow.md  github-actions.md  guidebook-governance.md  markdown-for-guidebook.md  reviewing-pull-requests.md  why-guidebook-is-open.md  writing-style-guide.md
admin/: article.css  config.yml  index.html
common-practices-tools/: README.md  balance-scores.md  best-practices-for-managers-and-team-members.md  code-management.md  difficult-conversation.md  document-management.md  gold-star-program.md  skills-base.md  telephone.md  withholds.md
docs/: LICENSE.md  (+5 more)
(+668 files in other folders)
