[tool.poetry]
name = "mkdocs-build"
version = "0.1.0"
description = "Build tools for CivicActions guidebook documentation"
authors = ["CivicActions Docs Team"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.7.1"
mkdocs-git-revision-date-localized-plugin = "^1.5.0"
pymdown-extensions = "^10.20"
# Keep this in sync with the version in .pre-commit-config.yaml
mdformat = "^1.0.0"
mdformat-mkdocs = {extras = ["recommended"], version = "^5.1.2"}

[tool.poetry.scripts]
format-changed = "scripts.format_changed:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
